src/antlr4/propositionParser/grammar/.antlr/propositionParser.java
// Generated from /home/magister/Slam/src/antlr4/propositionParser/grammar/proposition.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class propositionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, SIGN=8, DER=9, 
		LCPAREN=10, RCPAREN=11, LPAREN=12, RPAREN=13, VARIABLE=14, NUMERIC=15, 
		VERILOG_BINARY=16, GCC_BINARY=17, HEX=18, BOOLEAN=19, PLUS=20, MINUS=21, 
		TIMES=22, DIV=23, GT=24, GE=25, LT=26, LE=27, EQ=28, NEQ=29, BAND=30, 
		BOR=31, BXOR=32, NEG=33, LSHIFT=34, RSHIFT=35, AND=36, OR=37, NOT=38, 
		WS=39;
	public static final int
		RULE_file = 0, RULE_boolean = 1, RULE_booleanAtom = 2, RULE_booleanConstant = 3, 
		RULE_booleanVariable = 4, RULE_logic = 5, RULE_bitSelect = 6, RULE_logicAtom = 7, 
		RULE_logicConstant = 8, RULE_logicVariable = 9, RULE_numeric = 10, RULE_numericAtom = 11, 
		RULE_numericConstant = 12, RULE_numericVariable = 13, RULE_variable = 14, 
		RULE_relop = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "boolean", "booleanAtom", "booleanConstant", "booleanVariable", 
			"logic", "bitSelect", "logicAtom", "logicConstant", "logicVariable", 
			"numeric", "numericAtom", "numericConstant", "numericVariable", "variable", 
			"relop"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "',bool}'", "','", "':'", "',logic_'", "'}'", "',numeric'", 
			null, "'@'", "'['", "']'", "'('", "')'", null, null, null, null, null, 
			null, "'+'", "'-'", "'*'", "'/'", "'>'", "'>='", "'<'", "'<='", "'=='", 
			"'!='", "'&'", "'|'", "'^'", "'~'", "'<<'", "'>>'", "'&&'", "'||'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "SIGN", "DER", "LCPAREN", 
			"RCPAREN", "LPAREN", "RPAREN", "VARIABLE", "NUMERIC", "VERILOG_BINARY", 
			"GCC_BINARY", "HEX", "BOOLEAN", "PLUS", "MINUS", "TIMES", "DIV", "GT", 
			"GE", "LT", "LE", "EQ", "NEQ", "BAND", "BOR", "BXOR", "NEG", "LSHIFT", 
			"RSHIFT", "AND", "OR", "NOT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "proposition.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public propositionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public BooleanContext boolean_() {
			return getRuleContext(BooleanContext.class,0);
		}
		public TerminalNode EOF() { return getToken(propositionParser.EOF, 0); }
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			boolean_(0);
			setState(33);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BooleanContext extends ParserRuleContext {
		public Token booleanop;
		public TerminalNode NOT() { return getToken(propositionParser.NOT, 0); }
		public List<BooleanContext> boolean_() {
			return getRuleContexts(BooleanContext.class);
		}
		public BooleanContext boolean_(int i) {
			return getRuleContext(BooleanContext.class,i);
		}
		public List<LogicContext> logic() {
			return getRuleContexts(LogicContext.class);
		}
		public LogicContext logic(int i) {
			return getRuleContext(LogicContext.class,i);
		}
		public RelopContext relop() {
			return getRuleContext(RelopContext.class,0);
		}
		public List<NumericContext> numeric() {
			return getRuleContexts(NumericContext.class);
		}
		public NumericContext numeric(int i) {
			return getRuleContext(NumericContext.class,i);
		}
		public TerminalNode EQ() { return getToken(propositionParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(propositionParser.NEQ, 0); }
		public BooleanAtomContext booleanAtom() {
			return getRuleContext(BooleanAtomContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(propositionParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(propositionParser.RPAREN, 0); }
		public TerminalNode AND() { return getToken(propositionParser.AND, 0); }
		public TerminalNode OR() { return getToken(propositionParser.OR, 0); }
		public BooleanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolean; }
	}

	public final BooleanContext boolean_() throws RecognitionException {
		return boolean_(0);
	}

	private BooleanContext boolean_(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		BooleanContext _localctx = new BooleanContext(_ctx, _parentState);
		BooleanContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_boolean, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(36);
				match(NOT);
				setState(37);
				boolean_(15);
				}
				break;
			case 2:
				{
				setState(38);
				logic(0);
				setState(39);
				relop();
				setState(40);
				logic(0);
				}
				break;
			case 3:
				{
				setState(42);
				numeric(0);
				setState(43);
				relop();
				setState(44);
				numeric(0);
				}
				break;
			case 4:
				{
				setState(46);
				logic(0);
				setState(47);
				match(EQ);
				setState(48);
				logic(0);
				}
				break;
			case 5:
				{
				setState(50);
				numeric(0);
				setState(51);
				match(EQ);
				setState(52);
				numeric(0);
				}
				break;
			case 6:
				{
				setState(54);
				logic(0);
				setState(55);
				match(NEQ);
				setState(56);
				logic(0);
				}
				break;
			case 7:
				{
				setState(58);
				numeric(0);
				setState(59);
				match(NEQ);
				setState(60);
				numeric(0);
				}
				break;
			case 8:
				{
				setState(62);
				booleanAtom();
				}
				break;
			case 9:
				{
				setState(63);
				logic(0);
				}
				break;
			case 10:
				{
				setState(64);
				numeric(0);
				}
				break;
			case 11:
				{
				setState(65);
				match(LPAREN);
				setState(66);
				boolean_(0);
				setState(67);
				match(RPAREN);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(85);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(83);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new BooleanContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_boolean);
						setState(71);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(72);
						match(EQ);
						setState(73);
						boolean_(11);
						}
						break;
					case 2:
						{
						_localctx = new BooleanContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_boolean);
						setState(74);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(75);
						match(NEQ);
						setState(76);
						boolean_(8);
						}
						break;
					case 3:
						{
						_localctx = new BooleanContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_boolean);
						setState(77);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(78);
						((BooleanContext)_localctx).booleanop = match(AND);
						setState(79);
						boolean_(7);
						}
						break;
					case 4:
						{
						_localctx = new BooleanContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_boolean);
						setState(80);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(81);
						((BooleanContext)_localctx).booleanop = match(OR);
						setState(82);
						boolean_(6);
						}
						break;
					}
					} 
				}
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BooleanAtomContext extends ParserRuleContext {
		public BooleanConstantContext booleanConstant() {
			return getRuleContext(BooleanConstantContext.class,0);
		}
		public BooleanVariableContext booleanVariable() {
			return getRuleContext(BooleanVariableContext.class,0);
		}
		public BooleanAtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanAtom; }
	}

	public final BooleanAtomContext booleanAtom() throws RecognitionException {
		BooleanAtomContext _localctx = new BooleanAtomContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_booleanAtom);
		try {
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOLEAN:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				booleanConstant();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				booleanVariable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BooleanConstantContext extends ParserRuleContext {
		public TerminalNode BOOLEAN() { return getToken(propositionParser.BOOLEAN, 0); }
		public BooleanConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanConstant; }
	}

	public final BooleanConstantContext booleanConstant() throws RecognitionException {
		BooleanConstantContext _localctx = new BooleanConstantContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_booleanConstant);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(BOOLEAN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BooleanVariableContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public BooleanVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanVariable; }
	}

	public final BooleanVariableContext booleanVariable() throws RecognitionException {
		BooleanVariableContext _localctx = new BooleanVariableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_booleanVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__0);
			setState(95);
			variable();
			setState(96);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicContext extends ParserRuleContext {
		public Token artop;
		public Token logop;
		public TerminalNode NEG() { return getToken(propositionParser.NEG, 0); }
		public List<LogicContext> logic() {
			return getRuleContexts(LogicContext.class);
		}
		public LogicContext logic(int i) {
			return getRuleContext(LogicContext.class,i);
		}
		public TerminalNode DER() { return getToken(propositionParser.DER, 0); }
		public TerminalNode LPAREN() { return getToken(propositionParser.LPAREN, 0); }
		public TerminalNode NUMERIC() { return getToken(propositionParser.NUMERIC, 0); }
		public TerminalNode RPAREN() { return getToken(propositionParser.RPAREN, 0); }
		public LogicAtomContext logicAtom() {
			return getRuleContext(LogicAtomContext.class,0);
		}
		public TerminalNode TIMES() { return getToken(propositionParser.TIMES, 0); }
		public TerminalNode DIV() { return getToken(propositionParser.DIV, 0); }
		public TerminalNode PLUS() { return getToken(propositionParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(propositionParser.MINUS, 0); }
		public TerminalNode LSHIFT() { return getToken(propositionParser.LSHIFT, 0); }
		public TerminalNode RSHIFT() { return getToken(propositionParser.RSHIFT, 0); }
		public TerminalNode BAND() { return getToken(propositionParser.BAND, 0); }
		public TerminalNode BXOR() { return getToken(propositionParser.BXOR, 0); }
		public TerminalNode BOR() { return getToken(propositionParser.BOR, 0); }
		public BitSelectContext bitSelect() {
			return getRuleContext(BitSelectContext.class,0);
		}
		public LogicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logic; }
	}

	public final LogicContext logic() throws RecognitionException {
		return logic(0);
	}

	private LogicContext logic(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LogicContext _localctx = new LogicContext(_ctx, _parentState);
		LogicContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_logic, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NEG:
				{
				setState(99);
				match(NEG);
				setState(100);
				logic(12);
				}
				break;
			case DER:
				{
				setState(101);
				match(DER);
				setState(102);
				match(LPAREN);
				setState(103);
				logic(0);
				setState(104);
				match(T__2);
				setState(105);
				match(NUMERIC);
				setState(106);
				match(RPAREN);
				}
				break;
			case T__0:
			case NUMERIC:
			case VERILOG_BINARY:
			case GCC_BINARY:
			case HEX:
				{
				setState(108);
				logicAtom();
				}
				break;
			case LPAREN:
				{
				setState(109);
				match(LPAREN);
				setState(110);
				logic(0);
				setState(111);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(140);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(138);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new LogicContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_logic);
						setState(115);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(116);
						((LogicContext)_localctx).artop = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==TIMES || _la==DIV) ) {
							((LogicContext)_localctx).artop = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(117);
						logic(10);
						}
						break;
					case 2:
						{
						_localctx = new LogicContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_logic);
						setState(118);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(119);
						((LogicContext)_localctx).artop = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
							((LogicContext)_localctx).artop = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(120);
						logic(9);
						}
						break;
					case 3:
						{
						_localctx = new LogicContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_logic);
						setState(121);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(122);
						((LogicContext)_localctx).logop = match(LSHIFT);
						setState(123);
						logic(8);
						}
						break;
					case 4:
						{
						_localctx = new LogicContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_logic);
						setState(124);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(125);
						((LogicContext)_localctx).logop = match(RSHIFT);
						setState(126);
						logic(7);
						}
						break;
					case 5:
						{
						_localctx = new LogicContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_logic);
						setState(127);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(128);
						((LogicContext)_localctx).logop = match(BAND);
						setState(129);
						logic(6);
						}
						break;
					case 6:
						{
						_localctx = new LogicContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_logic);
						setState(130);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(131);
						((LogicContext)_localctx).logop = match(BXOR);
						setState(132);
						logic(5);
						}
						break;
					case 7:
						{
						_localctx = new LogicContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_logic);
						setState(133);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(134);
						((LogicContext)_localctx).logop = match(BOR);
						setState(135);
						logic(4);
						}
						break;
					case 8:
						{
						_localctx = new LogicContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_logic);
						setState(136);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(137);
						bitSelect();
						}
						break;
					}
					} 
				}
				setState(142);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BitSelectContext extends ParserRuleContext {
		public TerminalNode LCPAREN() { return getToken(propositionParser.LCPAREN, 0); }
		public List<TerminalNode> NUMERIC() { return getTokens(propositionParser.NUMERIC); }
		public TerminalNode NUMERIC(int i) {
			return getToken(propositionParser.NUMERIC, i);
		}
		public TerminalNode RCPAREN() { return getToken(propositionParser.RCPAREN, 0); }
		public BitSelectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bitSelect; }
	}

	public final BitSelectContext bitSelect() throws RecognitionException {
		BitSelectContext _localctx = new BitSelectContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bitSelect);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(LCPAREN);
			setState(144);
			match(NUMERIC);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(145);
				match(T__3);
				setState(146);
				match(NUMERIC);
				}
			}

			setState(149);
			match(RCPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicAtomContext extends ParserRuleContext {
		public LogicConstantContext logicConstant() {
			return getRuleContext(LogicConstantContext.class,0);
		}
		public LogicVariableContext logicVariable() {
			return getRuleContext(LogicVariableContext.class,0);
		}
		public LogicAtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicAtom; }
	}

	public final LogicAtomContext logicAtom() throws RecognitionException {
		LogicAtomContext _localctx = new LogicAtomContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_logicAtom);
		try {
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMERIC:
			case VERILOG_BINARY:
			case GCC_BINARY:
			case HEX:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				logicConstant();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				logicVariable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicConstantContext extends ParserRuleContext {
		public TerminalNode VERILOG_BINARY() { return getToken(propositionParser.VERILOG_BINARY, 0); }
		public TerminalNode GCC_BINARY() { return getToken(propositionParser.GCC_BINARY, 0); }
		public TerminalNode NUMERIC() { return getToken(propositionParser.NUMERIC, 0); }
		public TerminalNode HEX() { return getToken(propositionParser.HEX, 0); }
		public LogicConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicConstant; }
	}

	public final LogicConstantContext logicConstant() throws RecognitionException {
		LogicConstantContext _localctx = new LogicConstantContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_logicConstant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 491520L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicVariableContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode SIGN() { return getToken(propositionParser.SIGN, 0); }
		public TerminalNode NUMERIC() { return getToken(propositionParser.NUMERIC, 0); }
		public LogicVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicVariable; }
	}

	public final LogicVariableContext logicVariable() throws RecognitionException {
		LogicVariableContext _localctx = new LogicVariableContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_logicVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(T__0);
			setState(158);
			variable();
			setState(159);
			match(T__4);
			setState(160);
			match(SIGN);
			setState(161);
			match(NUMERIC);
			setState(162);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumericContext extends ParserRuleContext {
		public Token artop;
		public TerminalNode DER() { return getToken(propositionParser.DER, 0); }
		public TerminalNode LPAREN() { return getToken(propositionParser.LPAREN, 0); }
		public List<NumericContext> numeric() {
			return getRuleContexts(NumericContext.class);
		}
		public NumericContext numeric(int i) {
			return getRuleContext(NumericContext.class,i);
		}
		public TerminalNode NUMERIC() { return getToken(propositionParser.NUMERIC, 0); }
		public TerminalNode RPAREN() { return getToken(propositionParser.RPAREN, 0); }
		public NumericAtomContext numericAtom() {
			return getRuleContext(NumericAtomContext.class,0);
		}
		public LogicContext logic() {
			return getRuleContext(LogicContext.class,0);
		}
		public TerminalNode TIMES() { return getToken(propositionParser.TIMES, 0); }
		public TerminalNode DIV() { return getToken(propositionParser.DIV, 0); }
		public TerminalNode PLUS() { return getToken(propositionParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(propositionParser.MINUS, 0); }
		public NumericContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numeric; }
	}

	public final NumericContext numeric() throws RecognitionException {
		return numeric(0);
	}
